<resources>
    <string name="app_name">iEconomy</string>

    <string name="title">Title:</string>
    <string name="price">Price:</string>

    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember me</string>
    <string name="no_text_warning">Need to enter text to continue.</string>
    <string name="no_spaces_warning">White space is not allowed.</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="total_incomes">Total incomes: </string>
    <string name="total_expenses">Total expenses: </string>
    <string name="total_plus_minus">Total surplus/deficit: </string>
    <string name="total">Total: </string>

    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>

    <string name="btn_add">Insert</string>
    <string name="btn_submit">Submit</string>

    <string name="mode">Mode:</string>
    <string name="category">Category:</string>
    <string name="date">Date:</string>

    <string name="from">From</string>
    <string name="to">To</string>

    <string-array name="planets_array">
        <item>Overview</item>
        <item>Incomes</item>
        <item>Expenses</item>
        <item>Sign out</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_date">DateActivity</string>
</resources>
