<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.mah.ae5929.ekonomiapp.ExpensesFragment"
    android:id="@+id/expensesFrame">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/containerLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateLayout">

            <TextView
                android:layout_width="@dimen/tv_width"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/dateTv" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dateEt"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/titleLayout">

            <TextView
                android:layout_width="@dimen/tv_width"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:id="@+id/titleTv" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/titleEt"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/categoryLayout">

            <TextView
                android:layout_width="@dimen/tv_width"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:id="@+id/categoryTv" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="New Button"
                android:id="@+id/categoryBn"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/priceLayout">

            <TextView
                android:layout_width="@dimen/tv_width"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:id="@+id/priceTv" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/priceEt"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
